# TBSE

./: .gitignore  CMakeLists.txt  README  TBSE_config.h.in  env.sh  main.cpp
Core/: CMakeLists.txt  TBSE_Core_config.h  TGSE_Core_config.h  base_building.h  base_unit.h  building.h  core_model.cpp  core_model.h  gui_registry.cpp  gui_registry.h  iplayer.h  main_registry.cpp  main_registry.h  plugin.cpp  plugin.h  registry.cpp  registry.h  template_registry.h  terrain_element.cpp  terrain_element.h  terrain_modifier.h  unit.h  weapon.h  xsd_traits.cpp  xsd_traits.h
Docs/: TBSE.mm
GUI/: CMakeLists.txt  TBSE_GUI_config.h  main.cpp  main.h  main_window.cpp  main_window.h  main_window.ui  resources.qrc
GUI/2DGUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  auto_register.cpp  hexagon_item.cpp  hexagon_item.h  main.cpp  main.h  main_window.cpp  main_window.h  main_window.ui  resources_2dgui.qrc  scene_model.cpp  scene_model.h  scene_view.cpp  scene_view.h
Qt/2DGUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  TGSE_Qt_2DGUI_config.h  auto_register.cpp  main.cpp  stylesheet.qrc
Schemas/Core/: base_map.xsd  building.xsd  unit.xsd  weapon.xsd
Scripts/: xsd_to_source.py
share/TBSE/maps/: basic.TBSEgame
